NestJS: hbs rendering, csrf, cookie-parser

--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
 	"scripts": {
 		"prebuild": "rimraf dist",
 		"build": "nest build",
+		"rollup": "rollup -c",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-		"start": "cross-env NODE_ENV=production nest start",
-		"start:dev": "cross-env NODE_ENV=development nest start --watch",
-		"start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-		"start:prod": "cross-env NODE_ENV=production node dist/main",
+		"start": "npm run rollup && cross-env NODE_ENV=production nest start",
+		"start:dev": "npm run rollup && cross-env NODE_ENV=development nest start --watch",
+		"start:debug": "npm run rollup && cross-env NODE_ENV=development nest start --debug --watch",
+		"start:prod": "npm run rollup && cross-env NODE_ENV=production node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
-		"test:github": "cross-env NODE_ENV=github jest",
-		"test:watch": "cross-env NODE_ENV=test jest --watch",
-		"test:cov": "cross-env NODE_ENV=test jest --coverage",
-		"test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
+		"test:github": "npm run rollup && cross-env NODE_ENV=github jest",
+		"test:watch": "npm run rollup && cross-env NODE_ENV=test jest --watch",
+		"test:cov": "npm run rollup && cross-env NODE_ENV=test jest --coverage",
+		"test:debug": "npm run rollup && cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+		"test:e2e": "npm run rollup && cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
 		"@hapi/joi": "^17.1.1",
@@ -26,16 +27,30 @@
 		"@nestjs/config": "^1.0.1",
 		"@nestjs/core": "^8.0.6",
 		"@nestjs/platform-express": "^8.0.6",
+		"cookie-parser": "^1.4.5",
+		"cookie-session": "^1.4.0",
+		"csurf": "^1.11.0",
+		"element-resize-detector": "^1.2.3",
+		"express-handlebars": "^5.3.3",
 		"helmet": "^4.6.0",
+		"htmlnano": "^1.1.1",
+		"lightweight-charts": "^3.6.1",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
-		"rxjs": "^7.3.0"
+		"rxjs": "^7.3.0",
+		"url-parse": "^1.5.3"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^8.1.1",
 		"@nestjs/schematics": "^8.0.3",
 		"@nestjs/testing": "^8.0.6",
+		"@rollup/plugin-commonjs": "^20.0.0",
+		"@rollup/plugin-node-resolve": "^13.0.4",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/cookie-session": "^2.0.43",
+		"@types/csurf": "^1.11.2",
 		"@types/express": "^4.17.13",
+		"@types/express-handlebars": "^5.3.1",
 		"@types/hapi__joi": "^17.1.7",
 		"@types/jest": "^27.0.1",
 		"@types/node": "^16.9.2",
@@ -48,6 +63,9 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"jest": "27.2.0",
 		"prettier": "^2.4.1",
+		"rollup": "^2.56.3",
+		"rollup-plugin-node-globals": "^1.4.0",
+		"rollup-plugin-terser": "^7.0.2",
 		"supertest": "^6.1.6",
 		"ts-jest": "^27.0.5",
 		"ts-loader": "^9.2.5",
